fixed layout issue, added card border

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,9 +1,7 @@
-.xcard {
+.card {
   float: left;
-  border: solid 1px black;
-  width: 100px;
+  border: solid 2px black;
   border-radius: 5px;
-  height: 140px;
   margin-right: 20px;
 }
 
